--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 body {
     font-family: "Inter", sans-serif;
     background-color: #141414;
@@ -8,7 +11,7 @@ body {
     margin: 0;
 }
 .container {
-    width: 300px;
+    max-width: 350px;
     border-radius: 15px;
     background-color: #1f1f1f;
     padding: 30px;
